JARs with icons/emoji needed loader fixed.
This is ready in TextraTypist, but I need to complete the release first, or maybe backport the small fix... This also updates SquidSquad and the Graal helper, so the Graal build_native.bat can be simplified.