@@ -1,9 +1,3 @@
-C:\d\jvm\graal11\bin\native-image.cmd ^
--H:+ReportExceptionStackTraces ^
---report-unsupported-elements-at-runtime ^
---no-fallback ^
---add-modules jdk.unsupported ^
--H:+ForceNoROSectionRelocations ^
--H:-SpawnIsolates ^
--H:IncludeResources="((images|music|sfx|shaders)/.*)|(Iosevka.*)|(.*\.dll)" ^
+C:\d\jvm\graal17-new\bin\native-image.cmd ^
+-H:IncludeResources="((fonts|images|music|sfx|shaders)/.*)|(.*\.dll)" ^
 -jar ../lwjgl3/build/lib/DetritusScion.jar
